# junior_anywhere

./: .gitignore  README.md
backend/: README.md  db.sqlite3  pyproject.toml
backend/app1/: admin.py  forms.py  models.py  test.sh  test_register.py  views.py
backend/app1/forms/: companyForm.py
backend/app1/models/: companyModel.py  companyVacancyModel.py
backend/app1/views/: companyVacancyViews.py
backend/blog/: models.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_post_author.py
backend/blog/templates/blog/: about.html  base.html  home.html
backend/core/: settings.py  urls.py
backend/templates/: create.html  index.html
backend/users_app/: forms.py  models.py  views.py
backend/users_app/migrations/: 0001_initial.py  0002_user_phone_number.py
backend/users_app/templates/: index.html  login.html  profile.html
backend/users_app/user_handlers/: user_apply.py  user_auth.py  user_profile.py  user_register.py
backend_company/: Dockerfile  db.sqlite3
backend_company/app1/models/: companyVacancyModel.py
backend_company/app1/views/: companyVacancyViews.py  companyViews.py
backend_company/core/: urls.py
backend_company/templates/company/: register.html
backend_users/: pyproject.toml
backend_users/core/: settings.py  urls.py
backend_users/users_app/user_handlers/: user_apply.py
frontend/: package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: ContentBlock.vue
frontend/src/info/: employments.ts  vacancies.ts  vacancyStatuses.ts  workFormats.ts
(+45 files in other folders)
