[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sofya <abdulkina.s328@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Django = "5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
